syntax = "proto3";
package computer_vision_sports_proto;

message Double {
    double data = 1;
    string warning = 2; // optional
}
